// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UniRefColumnConfiguration component should render column "common_taxon": common_taxon 1`] = `
<DocumentFragment>
  <a
    href="/taxonomy/88456"
    title="Cyclospora cayetanensis, taxon ID 88456"
    translate="no"
  >
    Cyclospora cayetanensis
  </a>
</DocumentFragment>
`;

exports[`UniRefColumnConfiguration component should render column "common_taxonid": common_taxonid 1`] = `
<DocumentFragment>
  <a
    href="/taxonomy/88456"
    title="Cyclospora cayetanensis, taxon ID 88456"
    translate="no"
  >
    88456
  </a>
</DocumentFragment>
`;

exports[`UniRefColumnConfiguration component should render column "count": count 1`] = `
<DocumentFragment>
  1 member
</DocumentFragment>
`;

exports[`UniRefColumnConfiguration component should render column "date_modified": date_modified 1`] = `
<DocumentFragment>
  <time
    datetime="2016-11-30T00:00:00.000Z"
  >
    2016-11-30
  </time>
</DocumentFragment>
`;

exports[`UniRefColumnConfiguration component should render column "from": from 1`] = `<DocumentFragment />`;

exports[`UniRefColumnConfiguration component should render column "id": id 1`] = `
<DocumentFragment>
  <span
    class="no-wrap accession-view"
  >
    <a
      class="accession"
      href="/uniref/UniRef50_A0A1D3CUQ5"
    >
      UniRef50_A0A1D3CUQ5
    </a>
  </span>
</DocumentFragment>
`;

exports[`UniRefColumnConfiguration component should render column "identity": identity 1`] = `
<DocumentFragment>
  UniRef50
</DocumentFragment>
`;

exports[`UniRefColumnConfiguration component should render column "length": length 1`] = `
<DocumentFragment>
  127
</DocumentFragment>
`;

exports[`UniRefColumnConfiguration component should render column "members": members 1`] = `
<DocumentFragment>
  <ul
    class="no-bullet"
  >
    <li>
      <a
        href="/uniprotkb/A0A1D3CUQ5/entry"
      >
        A0A1D3CUQ5
      </a>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`UniRefColumnConfiguration component should render column "name": name 1`] = `
<DocumentFragment>
  Cluster: Glucose
</DocumentFragment>
`;

exports[`UniRefColumnConfiguration component should render column "organism": organism 1`] = `
<DocumentFragment>
  <ul
    class="no-bullet"
  >
    <li>
      <a
        href="/taxonomy/88456"
        title="Cyclospora cayetanensis, taxon ID 88456"
        translate="no"
      >
        Cyclospora cayetanensis
      </a>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`UniRefColumnConfiguration component should render column "organism_id": organism_id 1`] = `
<DocumentFragment>
  <ul
    class="no-bullet"
  >
    <li>
      <a
        href="/taxonomy/88456"
        title="Cyclospora cayetanensis, taxon ID 88456"
        translate="no"
      >
        88456
      </a>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`UniRefColumnConfiguration component should render column "sequence": sequence 1`] = `
<DocumentFragment>
  <div>
    <section
      class="sequence-container"
    >
      <div
        class="sequence"
      >
        <span
          class="sequence__chunk"
        >
          MQIGEEGVKG
        </span>
        <span
          class="sequence__chunk"
        >
          VAQSIAGLMC
        </span>
        <span
          class="sequence__chunk"
        >
          VAAGFSICVA
        </span>
        <span
          class="sequence__chunk"
        >
          GAVLQPLQQD
        </span>
        <span
          class="sequence__chunk"
        >
          FRLCGSQFAC
        </span>
        <span
          class="sequence__chunk"
        >
          TEKGAFVAVF
        </span>
        <span
          class="sequence__chunk"
        >
          APGAAVGSLV
        </span>
        <span
          class="sequence__chunk"
        >
          GGFVADAVGR
        </span>
        <span
          class="sequence__chunk"
        >
          WRSLFWTSLA
        </span>
        <span
          class="sequence__chunk"
        >
          FIAATGLTVM
        </span>
        <span
          class="sequence__chunk"
        >
          SATYAPLGWR
        </span>
        <span
          class="sequence__chunk"
        >
          EGRFESSALS
        </span>
        <span
          class="sequence__chunk"
        >
          ETLPSVY
        </span>
      </div>
    </section>
  </div>
</DocumentFragment>
`;

exports[`UniRefColumnConfiguration component should render column "types": types 1`] = `
<DocumentFragment>
  <span
    class="entry-title__status icon--unreviewed"
    title="This marks an unreviewed UniProtKB entry"
  >
    <test-file-stub />
  </span>
</DocumentFragment>
`;
